--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "nestjs-pino": "^4.5.0",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
+    "pino-pretty": "^13.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
